fixed some maintenance issues; refs #20082